@@ -1,281 +1,262 @@
 package parser.javaparser;
 
-import parser.tree.Relationship;
-import parser.tree.RelationshipType;
-import parser.tree.LeafNode;
-import parser.tree.NodeType;
-import parser.tree.PackageNode;
 import org.junit.jupiter.api.Test;
 import parser.factory.Parser;
 import parser.factory.ParserType;
 import parser.factory.ProjectParserFactory;
+import parser.tree.LeafNode;
+import parser.tree.NodeType;
+import parser.tree.PackageNode;
+import parser.tree.Relationship;
+import parser.tree.RelationshipType;
+import utils.PathConstructor;
 
-import java.io.IOException;
+import java.io.File;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class JavaparserRelationshipIdentifierTest {
 
-	Path currentDirectory = Path.of(".");
 	ParserType parserType = ParserType.JAVAPARSER;
 
 	@Test
 	void getFieldAndMethodTypesTest() {
-		try {
-			ProjectParserFactory projectParserFactory = new ProjectParserFactory(parserType);
-			Parser parser = projectParserFactory.createProjectParser();
+		Parser parser = ProjectParserFactory.createProjectParser(parserType);
 
-			Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(currentDirectory.toRealPath() + "\\src\\test\\resources\\LatexEditor\\src"));
-			List<String> methodReturnTypes = new ArrayList<>(Arrays.asList("Constructor", "void"));
-			List<String> fieldTypes = new ArrayList<>(List.of("VersionsManager"));
-			List<String> methodParameterTypes = new ArrayList<>(List.of("VersionsManager"));
+		Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(PathConstructor.getCurrentPath() + File.separator + PathConstructor.constructPath("src", "test", "resources", "LatexEditor", "src")));
+		List<String> methodReturnTypes = new ArrayList<>(Arrays.asList("Constructor", "void"));
+		List<String> fieldTypes = new ArrayList<>(List.of("VersionsManager"));
+		List<String> methodParameterTypes = new ArrayList<>(List.of("VersionsManager"));
 
-			PackageNode commandPackage = packages.get(Paths.get(currentDirectory.toRealPath().normalize().toString(), "\\src\\test\\resources\\LatexEditor\\src\\controller\\commands"));
-			LeafNode addLatexCommand = commandPackage.getLeafNodes().get("AddLatexCommand");
+		PackageNode commandPackage = packages.get(Paths.get(PathConstructor.getCurrentPath().normalize().toString(), PathConstructor.constructPath("src", "test", "resources", "LatexEditor", "src", "controller", "commands")));
+		LeafNode addLatexCommand = commandPackage.getLeafNodes().get("AddLatexCommand");
 
-			List<String> methodReturnTypesTest;
-			List<String> fieldTypesTest;
-			List<String> methodParameterTypesTest;
-			methodParameterTypesTest = addLatexCommand.getMethodParameterTypes();
-			fieldTypesTest = addLatexCommand.getFieldsTypes();
-			methodReturnTypesTest = addLatexCommand.getMethodsReturnTypes();
-			Collections.sort(methodReturnTypesTest);
-			Collections.sort(methodReturnTypes);
-			assertTrue(methodReturnTypesTest.size() == methodReturnTypes.size()
-					&& methodReturnTypes.containsAll(methodReturnTypesTest)
-					&& methodReturnTypesTest.containsAll(methodReturnTypes));
-			Collections.sort(fieldTypesTest);
-			Collections.sort(fieldTypes);
-			assertTrue(fieldTypesTest.size() == fieldTypes.size()
-					&& fieldTypes.containsAll(fieldTypesTest)
-					&& fieldTypesTest.containsAll(fieldTypes));
-			Collections.sort(methodParameterTypesTest);
-			Collections.sort(methodParameterTypes);
-			assertTrue(methodParameterTypesTest.size() == methodParameterTypes.size()
-					&& methodParameterTypes.containsAll(methodParameterTypesTest)
-					&& methodParameterTypesTest.containsAll(methodParameterTypes));
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+		List<String> methodReturnTypesTest;
+		List<String> fieldTypesTest;
+		List<String> methodParameterTypesTest;
+		methodParameterTypesTest = addLatexCommand.getMethodParameterTypes();
+		fieldTypesTest = addLatexCommand.getFieldsTypes();
+		methodReturnTypesTest = addLatexCommand.getMethodsReturnTypes();
+		Collections.sort(methodReturnTypesTest);
+		Collections.sort(methodReturnTypes);
+		assertTrue(
+			methodReturnTypesTest.size() == methodReturnTypes.size() &&
+		     methodReturnTypes.containsAll(methodReturnTypesTest) &&
+		     methodReturnTypesTest.containsAll(methodReturnTypes));
+		Collections.sort(fieldTypesTest);
+		Collections.sort(fieldTypes);
+		assertTrue(
+			fieldTypesTest.size() == fieldTypes.size() &&
+			fieldTypes.containsAll(fieldTypesTest) &&
+			fieldTypesTest.containsAll(fieldTypes));
+		Collections.sort(methodParameterTypesTest);
+		Collections.sort(methodParameterTypes);
+		assertTrue(
+			methodParameterTypesTest.size() == methodParameterTypes.size() &&
+			methodParameterTypes.containsAll(methodParameterTypesTest) &&
+			methodParameterTypesTest.containsAll(methodParameterTypes));
 	}
 
 	@Test
 	void leafNodeRelationshipsTest() {
-		try {
-			ProjectParserFactory projectParserFactory = new ProjectParserFactory(parserType);
-			Parser parser = projectParserFactory.createProjectParser();
+		Parser parser = ProjectParserFactory.createProjectParser(parserType);
 
-			Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(currentDirectory.toRealPath() + "\\src\\test\\resources\\LatexEditor\\src"));
-			PackageNode commandPackage = packages.get(Paths.get(currentDirectory.toRealPath().normalize().toString(), "\\src\\test\\resources\\LatexEditor\\src\\controller\\commands"));
+		Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(PathConstructor.getCurrentPath() + File.separator + PathConstructor.constructPath("src", "test", "resources", "LatexEditor", "src")));
+		PackageNode commandPackage = packages.get(Paths.get(PathConstructor.getCurrentPath().normalize().toString(), PathConstructor.constructPath("src", "test", "resources", "LatexEditor", "src", "controller", "commands")));
 
-			LeafNode addLatexCommand = commandPackage.getLeafNodes().get("AddLatexCommand");
-			List<Relationship<LeafNode>> nodeRelationships = addLatexCommand.getLeafNodeRelationships();
+		LeafNode addLatexCommand = commandPackage.getLeafNodes().get("AddLatexCommand");
+		List<Relationship<LeafNode>> nodeRelationships = addLatexCommand.getLeafNodeRelationships();
 
-			boolean foundObligatoryRelationship = false;
-			int relationshipCounter = 0;
-			for (Relationship<LeafNode> relationship : nodeRelationships) {
-				if ((relationship.getStartingNode().getName().equals("AddLatexCommand")) && (relationship.getEndingNode().getName().equals("VersionsManager"))) {
-					if (relationship.getRelationshipType().equals(RelationshipType.DEPENDENCY)) {
-						foundObligatoryRelationship = true;
-					} else {
-						foundObligatoryRelationship = relationship.getRelationshipType().equals(RelationshipType.ASSOCIATION);
-					}
-				} else if ((relationship.getStartingNode().getName().equals("AddLatexCommand")) && (relationship.getEndingNode().getName().equals("Command"))) {
-					assertEquals(RelationshipType.IMPLEMENTATION, relationship.getRelationshipType());
+		boolean foundObligatoryRelationship = false;
+		int relationshipCounter = 0;
+		for (Relationship<LeafNode> relationship : nodeRelationships) {
+			if ((relationship.startingNode().getName().equals("AddLatexCommand")) && (relationship.endingNode().getName().equals("VersionsManager"))) {
+				if (relationship.relationshipType().equals(RelationshipType.DEPENDENCY)) {
 					foundObligatoryRelationship = true;
 				} else {
-					foundObligatoryRelationship = false;
+					foundObligatoryRelationship = relationship.relationshipType().equals(RelationshipType.ASSOCIATION);
 				}
-				relationshipCounter++;
+			} else if ((relationship.startingNode().getName().equals("AddLatexCommand")) && (relationship.endingNode().getName().equals("Command"))) {
+				assertEquals(RelationshipType.IMPLEMENTATION, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			} else {
+				foundObligatoryRelationship = false;
 			}
-			assertEquals(3, relationshipCounter);
-			assertTrue(foundObligatoryRelationship);
-			assertEquals(NodeType.CLASS, addLatexCommand.getType());
+			relationshipCounter++;
+		}
+		assertEquals(3, relationshipCounter);
+		assertTrue(foundObligatoryRelationship);
+		assertEquals(NodeType.CLASS, addLatexCommand.getType());
 
-			LeafNode commandFactory = commandPackage.getLeafNodes().get("CommandFactory");
-			nodeRelationships = commandFactory.getLeafNodeRelationships();
+		LeafNode commandFactory = commandPackage.getLeafNodes().get("CommandFactory");
+		nodeRelationships = commandFactory.getLeafNodeRelationships();
 
-			boolean foundObligatoryRelationships_CommandFactoryToVersionsManager = false;
-			boolean foundObligatoryRelationships_CommandFactoryToCommand = false;
-			boolean foundObligatoryRelationships_CommandFactoryToAddLatexCommand = false;
-			relationshipCounter = 0;
-			for (Relationship<LeafNode> relationship : nodeRelationships) {
-				if ((relationship.getStartingNode().getName().equals("CommandFactory")) && (relationship.getEndingNode().getName().equals("VersionsManager"))) {
-					if (relationship.getRelationshipType().equals(RelationshipType.DEPENDENCY)) {
-						foundObligatoryRelationships_CommandFactoryToVersionsManager = true;
-					}else {
-						foundObligatoryRelationships_CommandFactoryToVersionsManager = relationship.getRelationshipType().equals(RelationshipType.ASSOCIATION);
-					}
-				} else if ((relationship.getStartingNode().getName().equals("CommandFactory")) && (relationship.getEndingNode().getName().equals("Command"))) {
-					if (relationship.getRelationshipType().equals(RelationshipType.DEPENDENCY))
-						foundObligatoryRelationships_CommandFactoryToCommand = true;
-				}else if ((relationship.getStartingNode().getName().equals("CommandFactory")) && (relationship.getEndingNode().getName().equals("AddLatexCommand"))) {
-					if (relationship.getRelationshipType().equals(RelationshipType.DEPENDENCY))
-						foundObligatoryRelationships_CommandFactoryToAddLatexCommand = true;
+		boolean foundObligatoryRelationships_CommandFactoryToVersionsManager = false;
+		boolean foundObligatoryRelationships_CommandFactoryToCommand = false;
+		boolean foundObligatoryRelationships_CommandFactoryToAddLatexCommand = false;
+		relationshipCounter = 0;
+		for (Relationship<LeafNode> relationship : nodeRelationships) {
+			if ((relationship.startingNode().getName().equals("CommandFactory")) && (relationship.endingNode().getName().equals("VersionsManager"))) {
+				if (relationship.relationshipType().equals(RelationshipType.DEPENDENCY)) {
+					foundObligatoryRelationships_CommandFactoryToVersionsManager = true;
+				}else {
+					foundObligatoryRelationships_CommandFactoryToVersionsManager = relationship.relationshipType().equals(RelationshipType.ASSOCIATION);
 				}
-				relationshipCounter++;
+			} else if ((relationship.startingNode().getName().equals("CommandFactory")) && (relationship.endingNode().getName().equals("Command"))) {
+				if (relationship.relationshipType().equals(RelationshipType.DEPENDENCY))
+					foundObligatoryRelationships_CommandFactoryToCommand = true;
+			}else if ((relationship.startingNode().getName().equals("CommandFactory")) && (relationship.endingNode().getName().equals("AddLatexCommand"))) {
+				if (relationship.relationshipType().equals(RelationshipType.DEPENDENCY))
+					foundObligatoryRelationships_CommandFactoryToAddLatexCommand = true;
 			}
-			assertTrue(foundObligatoryRelationships_CommandFactoryToVersionsManager);
-			assertTrue(foundObligatoryRelationships_CommandFactoryToCommand);
-			assertTrue(foundObligatoryRelationships_CommandFactoryToAddLatexCommand);
+			relationshipCounter++;
+		}
+		assertTrue(foundObligatoryRelationships_CommandFactoryToVersionsManager);
+		assertTrue(foundObligatoryRelationships_CommandFactoryToCommand);
+		assertTrue(foundObligatoryRelationships_CommandFactoryToAddLatexCommand);
 
-			assertEquals(13, relationshipCounter);
-			assertEquals(NodeType.CLASS, commandFactory.getType());
+		assertEquals(13, relationshipCounter);
+		assertEquals(NodeType.CLASS, commandFactory.getType());
 
-			projectParserFactory = new ProjectParserFactory(parserType);
-			parser = projectParserFactory.createProjectParser();
+		parser = ProjectParserFactory.createProjectParser(parserType);
 
-			packages = parser.parseSourcePackage(Paths.get(currentDirectory.toRealPath() + "\\src\\test\\resources\\ParserTesting"));
-			PackageNode sourcePackage = packages.get(Paths.get(currentDirectory.toRealPath().normalize().toString(),
-					"\\src\\test\\resources\\ParserTesting"));
+		packages = parser.parseSourcePackage(Paths.get(PathConstructor.getCurrentPath() + File.separator + PathConstructor.constructPath("src", "test", "resources", "ParserTesting")));
+		PackageNode sourcePackage = packages.get(Paths.get(PathConstructor.getCurrentPath().normalize().toString(),
+				PathConstructor.constructPath("src", "test", "resources", "ParserTesting")));
 
-			LeafNode objectCreation = sourcePackage.getLeafNodes().get("ObjectCreationTest");
-			nodeRelationships = objectCreation.getLeafNodeRelationships();
+		LeafNode objectCreation = sourcePackage.getLeafNodes().get("ObjectCreationTest");
+		nodeRelationships = objectCreation.getLeafNodeRelationships();
 
-			foundObligatoryRelationship = false;
-			relationshipCounter = 0;
-			for (Relationship<LeafNode> relationship : nodeRelationships) {
-				if ((relationship.getStartingNode().getName().equals("ObjectCreationTest")) && (relationship.getEndingNode().getName().equals("ExtensionClass"))) {
-					if (relationship.getRelationshipType().equals(RelationshipType.DEPENDENCY)) {
-						foundObligatoryRelationship = true;
-					}else {
-						foundObligatoryRelationship = relationship.getRelationshipType().equals(RelationshipType.ASSOCIATION);
-					}
-				}else if ((relationship.getStartingNode().getName().equals("ObjectCreationTest")) && (relationship.getEndingNode().getName().equals("TestingInterface"))) {
-					assertEquals(RelationshipType.DEPENDENCY, relationship.getRelationshipType());
-					foundObligatoryRelationship = true;
-				}else if ((relationship.getStartingNode().getName().equals("ObjectCreationTest")) && (relationship.getEndingNode().getName().equals("ImplementingClass"))) {
-					assertEquals(RelationshipType.DEPENDENCY, relationship.getRelationshipType());
+		foundObligatoryRelationship = false;
+		relationshipCounter = 0;
+		for (Relationship<LeafNode> relationship : nodeRelationships) {
+			if ((relationship.startingNode().getName().equals("ObjectCreationTest")) && (relationship.endingNode().getName().equals("ExtensionClass"))) {
+				if (relationship.relationshipType().equals(RelationshipType.DEPENDENCY)) {
 					foundObligatoryRelationship = true;
 				}else {
-					foundObligatoryRelationship = false;
+					foundObligatoryRelationship = relationship.relationshipType().equals(RelationshipType.ASSOCIATION);
 				}
-				relationshipCounter++;
+			}else if ((relationship.startingNode().getName().equals("ObjectCreationTest")) && (relationship.endingNode().getName().equals("TestingInterface"))) {
+				assertEquals(RelationshipType.DEPENDENCY, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			}else if ((relationship.startingNode().getName().equals("ObjectCreationTest")) && (relationship.endingNode().getName().equals("ImplementingClass"))) {
+				assertEquals(RelationshipType.DEPENDENCY, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			}else {
+				foundObligatoryRelationship = false;
 			}
-			assertEquals(4, relationshipCounter);
-			assertTrue(foundObligatoryRelationship);
-		} catch (IOException e) {
-			e.printStackTrace();
+			relationshipCounter++;
 		}
+		assertEquals(4, relationshipCounter);
+		assertTrue(foundObligatoryRelationship);
 	}
 
 	@Test
 	void leafNodeInheritanceRelationshipTest() {
-		try {
-			ProjectParserFactory projectParserFactory = new ProjectParserFactory(parserType);
-			Parser parser = projectParserFactory.createProjectParser();
+		Parser parser = ProjectParserFactory.createProjectParser(parserType);
 
-			Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(currentDirectory.toRealPath() + "\\src\\test\\resources\\ParserTesting"));
-			PackageNode sourcePackage = packages.get(Paths.get(currentDirectory.toRealPath().normalize().toString(), "\\src\\test\\resources\\ParserTesting"));
+		Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(PathConstructor.getCurrentPath() + File.separator + PathConstructor.constructPath("src", "test", "resources", "ParserTesting")));
+		PackageNode sourcePackage = packages.get(Paths.get(PathConstructor.getCurrentPath().normalize().toString(), PathConstructor.constructPath("src", "test", "resources", "ParserTesting")));
 
-			LeafNode implementingClassLeaf = sourcePackage.getLeafNodes().get("ImplementingClass");
-			List<Relationship<LeafNode>> nodeRelationships = implementingClassLeaf.getLeafNodeRelationships();
+		LeafNode implementingClassLeaf = sourcePackage.getLeafNodes().get("ImplementingClass");
+		List<Relationship<LeafNode>> nodeRelationships = implementingClassLeaf.getLeafNodeRelationships();
 
-			boolean foundObligatoryRelationship = false;
-			int relationshipCounter = 0;
-			for (Relationship<LeafNode> relationship : nodeRelationships) {
-				if ((relationship.getStartingNode().getName().equals("ImplementingClass")) && (relationship.getEndingNode().getName().equals("TestingInterface2"))) {
-					assertEquals(RelationshipType.IMPLEMENTATION, relationship.getRelationshipType());
-					foundObligatoryRelationship = true;
-				} else if ((relationship.getStartingNode().getName().equals("ImplementingClass")) && (relationship.getEndingNode().getName().equals("ExtensionClass"))) {
-					assertEquals(RelationshipType.EXTENSION, relationship.getRelationshipType());
-					foundObligatoryRelationship = true;
-				} else if ((relationship.getStartingNode().getName().equals("ImplementingClass")) && (relationship.getEndingNode().getName().equals("TestingInterface"))) {
-					assertEquals(RelationshipType.IMPLEMENTATION, relationship.getRelationshipType());
-					foundObligatoryRelationship = true;
-				} else {
-					foundObligatoryRelationship = false;
-				}
-				relationshipCounter++;
+		boolean foundObligatoryRelationship = false;
+		int relationshipCounter = 0;
+		for (Relationship<LeafNode> relationship : nodeRelationships) {
+			if ((relationship.startingNode().getName().equals("ImplementingClass")) && (relationship.endingNode().getName().equals("TestingInterface2"))) {
+				assertEquals(RelationshipType.IMPLEMENTATION, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			} else if ((relationship.startingNode().getName().equals("ImplementingClass")) && (relationship.endingNode().getName().equals("ExtensionClass"))) {
+				assertEquals(RelationshipType.EXTENSION, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			} else if ((relationship.startingNode().getName().equals("ImplementingClass")) && (relationship.endingNode().getName().equals("TestingInterface"))) {
+				assertEquals(RelationshipType.IMPLEMENTATION, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			} else {
+				foundObligatoryRelationship = false;
 			}
-
-			assertTrue(foundObligatoryRelationship);
-			assertEquals(3, relationshipCounter);
-			assertEquals(NodeType.CLASS, implementingClassLeaf.getType());
-		} catch (IOException e) {
-			e.printStackTrace();
+			relationshipCounter++;
 		}
+
+		assertTrue(foundObligatoryRelationship);
+		assertEquals(3, relationshipCounter);
+		assertEquals(NodeType.CLASS, implementingClassLeaf.getType());
 	}
 
 	@Test
 	void packageNodeRelationshipsTest() {
-		try {
-			ProjectParserFactory projectParserFactory = new ProjectParserFactory(parserType);
-			Parser parser = projectParserFactory.createProjectParser();
+		Parser parser = ProjectParserFactory.createProjectParser(parserType);
 
-			Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(currentDirectory.toRealPath() + "\\src\\test\\resources\\LatexEditor\\src"));
+		Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(PathConstructor.getCurrentPath() + File.separator + PathConstructor.constructPath("src", "test", "resources", "LatexEditor", "src")));
 
-			PackageNode commands = packages.get(Paths.get(currentDirectory.toRealPath().normalize().toString(), "\\src\\test\\resources\\LatexEditor\\src\\controller\\commands"));
-			List<Relationship<PackageNode>> packageRelationships = commands.getPackageNodeRelationships();
+		PackageNode commands = packages.get(Paths.get(PathConstructor.getCurrentPath().normalize().toString(), PathConstructor.constructPath("src", "test", "resources", "LatexEditor", "src", "controller", "commands")));
+		List<Relationship<PackageNode>> packageRelationships = commands.getPackageNodeRelationships();
 
-			boolean foundObligatoryRelationship = false;
-			int relationshipCounter = 0;
-			for (Relationship<PackageNode> relationship : packageRelationships) {
-				if ((relationship.getStartingNode().getName().equals("src.controller.commands")) && (relationship.getEndingNode().getName().equals("src.model"))) {
-					assertEquals(RelationshipType.DEPENDENCY, relationship.getRelationshipType());
-					foundObligatoryRelationship = true;
-				} else {
-					foundObligatoryRelationship = false;
-				}
-				relationshipCounter++;
+		boolean foundObligatoryRelationship = false;
+		int relationshipCounter = 0;
+		for (Relationship<PackageNode> relationship : packageRelationships) {
+			if ((relationship.startingNode().getName().equals("src.controller.commands")) && (relationship.endingNode().getName().equals("src.model"))) {
+				assertEquals(RelationshipType.DEPENDENCY, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			} else {
+				foundObligatoryRelationship = false;
 			}
-
-			assertTrue(foundObligatoryRelationship);
-			assertEquals(1, relationshipCounter);
-			assertEquals(NodeType.PACKAGE, commands.getType());
-
-			PackageNode controller = packages.get(Paths.get(currentDirectory.toRealPath().normalize().toString(), "\\src\\test\\resources\\LatexEditor\\src\\controller"));
-			packageRelationships = controller.getPackageNodeRelationships();
-
-			foundObligatoryRelationship = false;
-			relationshipCounter = 0;
-			for (Relationship<PackageNode> relationship : packageRelationships) {
-				if ((relationship.getStartingNode().getName().equals("src.controller")) && (relationship.getEndingNode().getName().equals("src.model"))) {
-					assertEquals(RelationshipType.DEPENDENCY, relationship.getRelationshipType());
-					foundObligatoryRelationship = true;
-				} else if ((relationship.getStartingNode().getName().equals("src.controller")) && (relationship.getEndingNode().getName().equals("src.controller.commands"))) {
-					assertEquals(RelationshipType.DEPENDENCY, relationship.getRelationshipType());
-					foundObligatoryRelationship = true;
-				} else {
-					foundObligatoryRelationship = false;
-				}
-				relationshipCounter++;
-			}
-
-			assertTrue(foundObligatoryRelationship);
-			assertEquals(2, relationshipCounter);
-			assertEquals(NodeType.PACKAGE, commands.getType());
-		} catch (IOException e) {
-			e.printStackTrace();
+			relationshipCounter++;
 		}
+
+		assertTrue(foundObligatoryRelationship);
+		assertEquals(1, relationshipCounter);
+		assertEquals(NodeType.PACKAGE, commands.getType());
+
+		PackageNode controller = packages.get(Paths.get(PathConstructor.getCurrentPath().normalize().toString(), PathConstructor.constructPath("src", "test", "resources", "LatexEditor", "src", "controller")));
+		packageRelationships = controller.getPackageNodeRelationships();
+
+		foundObligatoryRelationship = false;
+		relationshipCounter = 0;
+		for (Relationship<PackageNode> relationship : packageRelationships) {
+			if ((relationship.startingNode().getName().equals("src.controller")) && (relationship.endingNode().getName().equals("src.model"))) {
+				assertEquals(RelationshipType.DEPENDENCY, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			} else if ((relationship.startingNode().getName().equals("src.controller")) && (relationship.endingNode().getName().equals("src.controller.commands"))) {
+				assertEquals(RelationshipType.DEPENDENCY, relationship.relationshipType());
+				foundObligatoryRelationship = true;
+			} else {
+				foundObligatoryRelationship = false;
+			}
+			relationshipCounter++;
+		}
+
+		assertTrue(foundObligatoryRelationship);
+		assertEquals(2, relationshipCounter);
+		assertEquals(NodeType.PACKAGE, commands.getType());
 	}
 
 	@Test
 	void leafNodeTypesTest() {
-		try {
-			ProjectParserFactory projectParserFactory = new ProjectParserFactory(parserType);
-			Parser parser = projectParserFactory.createProjectParser();
+		Parser parser = ProjectParserFactory.createProjectParser(parserType);
 
-			Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(currentDirectory.toRealPath() + "\\src\\test\\resources\\ParserTesting"));
-			PackageNode sourcePackage = packages.get(Paths.get(currentDirectory.toRealPath().normalize().toString(), "\\src\\test\\resources\\ParserTesting"));
-			List<LeafNode> classLeafs = new ArrayList<>();
-			List<LeafNode> interfaceLeafs = new ArrayList<>();
-			classLeafs.add(sourcePackage.getLeafNodes().get("ImplementingClass"));
-			classLeafs.add(sourcePackage.getLeafNodes().get("ExtensionClass"));
-			interfaceLeafs.add(sourcePackage.getLeafNodes().get("TestingInterface"));
-			interfaceLeafs.add(sourcePackage.getLeafNodes().get("TestingInterface2"));
-			for (LeafNode l : classLeafs) {
-				assertEquals(NodeType.CLASS, l.getType());
-			}
-			for (LeafNode l : interfaceLeafs) {
-				assertEquals(NodeType.INTERFACE, l.getType());
-			}
-		} catch (IOException e) {
-			e.printStackTrace();
+		Map<Path, PackageNode> packages = parser.parseSourcePackage(Paths.get(PathConstructor.getCurrentPath() + File.separator + PathConstructor.constructPath("src", "test", "resources", "ParserTesting")));
+		PackageNode sourcePackage = packages.get(Paths.get(PathConstructor.getCurrentPath().normalize().toString(), PathConstructor.constructPath("src", "test", "resources", "ParserTesting")));
+		List<LeafNode> classLeafs = new ArrayList<>();
+		List<LeafNode> interfaceLeafs = new ArrayList<>();
+		classLeafs.add(sourcePackage.getLeafNodes().get("ImplementingClass"));
+		classLeafs.add(sourcePackage.getLeafNodes().get("ExtensionClass"));
+		interfaceLeafs.add(sourcePackage.getLeafNodes().get("TestingInterface"));
+		interfaceLeafs.add(sourcePackage.getLeafNodes().get("TestingInterface2"));
+		for (LeafNode l : classLeafs) {
+			assertEquals(NodeType.CLASS, l.getType());
+		}
+		for (LeafNode l : interfaceLeafs) {
+			assertEquals(NodeType.INTERFACE, l.getType());
 		}
 	}
 }
